import Component from "components/results/financial-risk/archetype/heading";
import ComponentHandler from "support/component-handler";
import {mockAssessment, useAssessment} from "support/container/http";
import {mockOption, useOption} from "support/container/options";
import assessment from "support/data/assessment/personality/financial-risk";
import useContainer from "support/hooks/use-container";

describe("Results.FinancialRisk.Archetype.Heading", () => {
  let component;

  useContainer({assessmentID: assessment.id});
  useAssessment(assessment);
  useOption("perspective", "thirdPerson");

  it("renders component", async() => {
    component = await ComponentHandler.setup(Component);

    expect(component.tree).toMatchSnapshot();
  });

  it("renders nothing if not ready", async() => {
    mockAssessment(null);
    component = await ComponentHandler.setup(Component);

    expect(component.tree).toMatchSnapshot();
  });

  it("renders nothing if no archetype", async() => {
    mockAssessment({...assessment, archetype: null, personality_types: null});
    component = await ComponentHandler.setup(Component);

    expect(component.tree).toMatchSnapshot();
  });

  it("renders perspective correctly", async() => {
    mockOption("perspective", "firstPerson");
    component = await ComponentHandler.setup(Component);

    expect(component.tree).toMatchSnapshot();
  });
});
